java/versioned_docs/version-1.17/api/class-request.mdx
---
id: class-request
title: "Request"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Whenever the page sends a request for a network resource the following sequence of events are emitted by [Page]:
* [Page.onRequest(handler)](./api/class-page.mdx#page-event-request) emitted when the request is issued by the page.
* [Page.onResponse(handler)](./api/class-page.mdx#page-event-response) emitted when/if the response status and headers are received for the request.
* [Page.onRequestFinished(handler)](./api/class-page.mdx#page-event-request-finished) emitted when the response body is downloaded and the request is complete.

If request fails at some point, then instead of `'requestfinished'` event (and possibly instead of 'response' event), the  [Page.onRequestFailed(handler)](./api/class-page.mdx#page-event-request-failed) event is emitted.

:::note
HTTP Error responses, such as 404 or 503, are still successful responses from HTTP standpoint, so request will complete with `'requestfinished'` event.
:::

If request gets a 'redirect' response, the request is successfully finished with the 'requestfinished' event, and a new request is  issued to a redirected url.


- [Request.allHeaders()](./api/class-request.mdx#request-all-headers)
- [Request.failure()](./api/class-request.mdx#request-failure)
- [Request.frame()](./api/class-request.mdx#request-frame)
- [Request.headers()](./api/class-request.mdx#request-headers)
- [Request.headersArray()](./api/class-request.mdx#request-headers-array)
- [Request.headerValue(name)](./api/class-request.mdx#request-header-value)
- [Request.isNavigationRequest()](./api/class-request.mdx#request-is-navigation-request)
- [Request.method()](./api/class-request.mdx#request-method)
- [Request.postData()](./api/class-request.mdx#request-post-data)
- [Request.postDataBuffer()](./api/class-request.mdx#request-post-data-buffer)
- [Request.redirectedFrom()](./api/class-request.mdx#request-redirected-from)
- [Request.redirectedTo()](./api/class-request.mdx#request-redirected-to)
- [Request.resourceType()](./api/class-request.mdx#request-resource-type)
- [Request.response()](./api/class-request.mdx#request-response)
- [Request.sizes()](./api/class-request.mdx#request-sizes)
- [Request.timing()](./api/class-request.mdx#request-timing)
- [Request.url()](./api/class-request.mdx#request-url)

## Request.allHeaders() {#request-all-headers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-all-headers-return"/> &#60;[Map]<[String], [String]>&#62;<a href="#request-all-headers-return" class="list-anchor">#</a>

An object with all the request HTTP headers associated with this request. The header names are lower-cased.

## Request.failure() {#request-failure}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-failure-return"/> &#60;[null]|[String]&#62;<a href="#request-failure-return" class="list-anchor">#</a>

The method returns `null` unless this request has failed, as reported by `requestfailed` event.

Example of logging of all the failed requests:

```java
page.onRequestFailed(request -> {
  System.out.println(request.url() + " " + request.failure());
});
```

## Request.frame() {#request-frame}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-frame-return"/> &#60;[Frame]&#62;<a href="#request-frame-return" class="list-anchor">#</a>

Returns the [Frame] that initiated this request.

## Request.headerValue(name) {#request-header-value}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-header-value-option-name"/> &#60;[String]&#62; Name of the header.<a href="#request-header-value-option-name" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-header-value-return"/> &#60;[null]|[String]&#62;<a href="#request-header-value-return" class="list-anchor">#</a>

Returns the value of the header matching the name. The name is case insensitive.

## Request.headers() {#request-headers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-headers-return"/> &#60;[Map]<[String], [String]>&#62;<a href="#request-headers-return" class="list-anchor">#</a>

**DEPRECATED** Incomplete list of headers as seen by the rendering engine. Use [Request.allHeaders()](./api/class-request.mdx#request-all-headers) instead.

## Request.headersArray() {#request-headers-array}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-headers-array-return"/> &#60;[List]<`HttpHeader`>&#62;<a href="#request-headers-array-return" class="list-anchor">#</a>
  - `name` &#60;[String]&#62; Name of the header.
  - `value` &#60;[String]&#62; Value of the header.

An array with all the request HTTP headers associated with this request. Unlike [Request.allHeaders()](./api/class-request.mdx#request-all-headers), header names are NOT lower-cased. Headers with multiple entries, such as `Set-Cookie`, appear in the array multiple times.

## Request.isNavigationRequest() {#request-is-navigation-request}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-is-navigation-request-return"/> &#60;[boolean]&#62;<a href="#request-is-navigation-request-return" class="list-anchor">#</a>

Whether this request is driving frame's navigation.

## Request.method() {#request-method}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-method-return"/> &#60;[String]&#62;<a href="#request-method-return" class="list-anchor">#</a>

Request's method (GET, POST, etc.)

## Request.postData() {#request-post-data}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-post-data-return"/> &#60;[null]|[String]&#62;<a href="#request-post-data-return" class="list-anchor">#</a>

Request's post body, if any.

## Request.postDataBuffer() {#request-post-data-buffer}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-post-data-buffer-return"/> &#60;[null]|[byte&#91;&#93;]&#62;<a href="#request-post-data-buffer-return" class="list-anchor">#</a>

Request's post body in a binary form, if any.

## Request.redirectedFrom() {#request-redirected-from}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-redirected-from-return"/> &#60;[null]|[Request]&#62;<a href="#request-redirected-from-return" class="list-anchor">#</a>

Request that was redirected by the server to this one, if any.

When the server responds with a redirect, Playwright creates a new [Request] object. The two requests are connected by `redirectedFrom()` and `redirectedTo()` methods. When multiple server redirects has happened, it is possible to construct the whole redirect chain by repeatedly calling `redirectedFrom()`.

For example, if the website `http://example.com` redirects to `https://example.com`:

```java
Response response = page.navigate("http://example.com");
System.out.println(response.request().redirectedFrom().url()); // "http://example.com"
```

If the website `https://google.com` has no redirects:

```java
Response response = page.navigate("https://google.com");
System.out.println(response.request().redirectedFrom()); // null
```

## Request.redirectedTo() {#request-redirected-to}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-redirected-to-return"/> &#60;[null]|[Request]&#62;<a href="#request-redirected-to-return" class="list-anchor">#</a>

New request issued by the browser if the server responded with redirect.

This method is the opposite of [Request.redirectedFrom()](./api/class-request.mdx#request-redirected-from):

```java
System.out.println(request.redirectedFrom().redirectedTo() == request); // true
```

## Request.resourceType() {#request-resource-type}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-resource-type-return"/> &#60;[String]&#62;<a href="#request-resource-type-return" class="list-anchor">#</a>

Contains the request's resource type as it was perceived by the rendering engine. ResourceType will be one of the following: `document`, `stylesheet`, `image`, `media`, `font`, `script`, `texttrack`, `xhr`, `fetch`, `eventsource`, `websocket`, `manifest`, `other`.

## Request.response() {#request-response}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-response-return"/> &#60;[null]|[Response]&#62;<a href="#request-response-return" class="list-anchor">#</a>

Returns the matching [Response] object, or `null` if the response was not received due to error.

## Request.sizes() {#request-sizes}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-sizes-return"/> &#60;Sizes&#62;<a href="#request-sizes-return" class="list-anchor">#</a>
  - `requestBodySize` &#60;[int]&#62; Size of the request body (POST data payload) in bytes. Set to 0 if there was no body.
  - `requestHeadersSize` &#60;[int]&#62; Total number of bytes from the start of the HTTP request message until (and including) the double CRLF before the body.
  - `responseBodySize` &#60;[int]&#62; Size of the received response body (encoded) in bytes.
  - `responseHeadersSize` &#60;[int]&#62; Total number of bytes from the start of the HTTP response message until (and including) the double CRLF before the body.

Returns resource size information for given request.

## Request.timing() {#request-timing}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-timing-return"/> &#60;Timing&#62;<a href="#request-timing-return" class="list-anchor">#</a>
  - `startTime` &#60;[double]&#62; Request start time in milliseconds elapsed since January 1, 1970 00:00:00 UTC
  - `domainLookupStart` &#60;[double]&#62; Time immediately before the browser starts the domain name lookup for the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `domainLookupEnd` &#60;[double]&#62; Time immediately after the browser starts the domain name lookup for the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `connectStart` &#60;[double]&#62; Time immediately before the user agent starts establishing the connection to the server to retrieve the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `secureConnectionStart` &#60;[double]&#62; Time immediately before the browser starts the handshake process to secure the current connection. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `connectEnd` &#60;[double]&#62; Time immediately before the user agent starts establishing the connection to the server to retrieve the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `requestStart` &#60;[double]&#62; Time immediately before the browser starts requesting the resource from the server, cache, or local resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `responseStart` &#60;[double]&#62; Time immediately after the browser starts requesting the resource from the server, cache, or local resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `responseEnd` &#60;[double]&#62; Time immediately after the browser receives the last byte of the resource or immediately before the transport connection is closed, whichever comes first. The value is given in milliseconds relative to `startTime`, -1 if not available.

Returns resource timing information for given request. Most of the timing values become available upon the response, `responseEnd` becomes available when request finishes. Find more information at [Resource Timing API](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceResourceTiming).

```java
page.onRequestFinished(request -> {
  Timing timing = request.timing();
  System.out.println(timing.responseEnd - timing.startTime);
});
page.navigate("http://example.com");
```

## Request.url() {#request-url}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-url-return"/> &#60;[String]&#62;<a href="#request-url-return" class="list-anchor">#</a>

URL of the request.

[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"
